--- a/tesi.bib
+++ b/tesi.bib
@@ -163,7 +163,8 @@ publisher = {USENIX Association},
 }
 
 @inproceedings{longld:2010,
-author = {longld},
+author = {Long Le},
+title = {Payload already inside: data reuse for ROP exploits},
 year = {2010},
 }
 @inproceedings{Shacham:2004,
